--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>SH Figuarts Prices Charts</title>
+  <link rel="icon" href="favicon.png" type="image/png">
   <!-- Tailwind CSS (CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Vue 3 (CDN) -->
